add flask dep and fix ui prec. list

--- a/templates/index.html
+++ b/templates/index.html
@@ -199,7 +199,7 @@
 
             const precautionList = document.getElementById("precaution-list");
             precautionList.innerHTML = `<b>Precautions:</b>`;
-            data.precaution_list.forEach(item => {
+            data.precution_list.forEach(item => {
                 precautionList.innerHTML += `<li>${item}</li>`;
             });
         }
